fixed coupon terms area on small screens

--- a/assets/styles/source/_coupon-info-box.scss
+++ b/assets/styles/source/_coupon-info-box.scss
@@ -2,9 +2,10 @@
 
 .coupon-info-box {
     display: block;
-    border: 1px solid $smoke;
+    border: 2px solid $smoke;
     border-radius: $global-radius;
     margin: 0;
+    margin-bottom: $base-line-height-rem;
     padding: 0;
     @include clearfix();
 }
